refactor ms-history: consistency, validation and structure improvements